# matc-ui

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/commands/: attributes.rs  clusters.rs  commission.rs  devices.rs  discovery.rs  invoke.rs  logs.rs  mod.rs  write.rs
src/components/: AttributeTree.vue  CommandPanel.vue  ControlCard.vue  DeviceCard.vue  DeviceInfoPanel.vue  DeviceTreePanel.vue  WritePanel.vue
src/router/: index.ts
src/stores/: control.ts  devices.ts  discovery.ts  logs.ts  theme.ts
src/types/: index.ts
src/utils/: controlClusters.ts  deviceStatus.ts  deviceTree.ts  matterStatus.ts
src/views/: CommissionByCodeView.vue  CommissionView.vue  ControlView.vue  DeviceDetailView.vue  DevicesView.vue  DiscoverView.vue  LogsView.vue  SettingsView.vue
