[package]
name = "matc-ui"
version = "0.1.0"
description = "Matter Controller UI"
authors = []
edition = "2021"

[lib]
name = "matc_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
#matc = { path = "../../rust-matc", features = ["ble"] }
matc = { git = "https://github.com/tom-code/rust-matc.git", branch = "main", features = ["ble"] }
hex = "0.4"
log = "0.4"
rand = "0.8"

[profile.dev]
opt-level = 1
